--- a/css/riset/riset.css
+++ b/css/riset/riset.css
@@ -180,4 +180,23 @@ section {
 .btn-warning:focus {
   outline: 2px solid var(--outline-warning);
 }
+
+.btn-white {
+  background-color: var(--putih);
+  border-color: var(--putih);
+}
+
+.btn-white:focus {
+  outline: 2px solid var(--outline-warning);
+}
+
+.btn-dark {
+  color: var(--putih);
+  background-color: var(--dark);
+  border-color: var(--dark);
+}
+
+.btn-dark:focus {
+  outline: 2px solid var(--outline-danger);
+}
 /*# sourceMappingURL=riset.css.map */
