--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,22 @@
     --danger: #dc3545;
     --primary: #007bff;
     --warning: #ffc107;
+    --dark: #5b5b5c;
+
+
+    --border-table: 1px solid #dee2e6;
+    --table-dark: #343a40;
+    --tr: rgba(0, 0, 0, 0.05);
+
+
+    --outline-input: #0176f4bd;
+    --outline-button: #63aeffbd;
+    --outline-warning: #ffe601f1;
+    --outline-white: rgb(207, 207, 207);
+    --outline-dark: #717172;
+
+
+
 
     --tw-gradient-to: #06b6d4;
     --tw-gradient-from: #0d6efd;
@@ -72,19 +88,22 @@
 }
 
 
+header.scroll {
+    box-shadow: var(--shadow-header);
+}
+
 header {
     width: 100%;
     min-height: 10vh;
     max-height: 100%;
+    padding: 0 100px;
+    transition: .5s;
     position: fixed;
     top: 0;
-    padding: 0 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     background: var(--hero);
-    // background: var(--background-header);
-    box-shadow: var(--shadow-header);
     z-index: 999999999999999999999999999999999999999999999999999999999999999999999999 !important;
 
     .container {
@@ -232,6 +251,147 @@ header {
 }
 
 
+
+
+.hero {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--hero);
+
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .caption {
+            width: 60%;
+
+            h1 {
+                font-size: 3rem;
+                line-height: 60px;
+                color: var(--putih);
+                margin-bottom: 20px;
+
+                span {
+                    background: linear-gradient(to right, var(--tw-gradient-stops));
+                    background-clip: text;
+                    -moz-background-clip: text;
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+            }
+
+            p {
+                font-size: 1.2rem;
+                color: var(--putih);
+                margin: 20px 0;
+            }
+        }
+
+        .img {
+            width: 40%;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
+
+
+.series {
+    width: 100%;
+    height: 100%;
+
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        .perSeries {
+            width: calc(90%/3);
+            margin: 30px 10px;
+
+            img {
+                width: 100%;
+                height: 200px;
+                object-fit: cover;
+                border-radius: 10px;
+                background-color: var(--putih-900);
+            }
+
+            p {
+                font-size: .9rem;
+            }
+
+            h2 {
+                font-size: 1rem;
+            }
+        }
+    }
+
+}
+
+
+.containerTopik {
+    width: 100%;
+    height: 100%;
+
+    .container {
+
+        .title {
+            text-align: center;
+
+            h1 {
+                font-size: 2rem;
+                font-weight: 600;
+                margin-bottom: 10px;
+            }
+
+            p {
+                font-size: 1.2rem;
+                line-height: 30px;
+            }
+        }
+
+        .topik {
+            width: 100%;
+            height: 100%;
+            padding: 20px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 50px;
+            border-radius: 10px;
+            background-color: rgb(231, 231, 231);
+
+            .perTopik {
+                padding: 7px 20px;
+                margin: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 7px;
+                background-color: var(--putih);
+
+                span {
+                    width: 30px;
+                    height: 30px;
+                    font-size: .9rem;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-right: 20px;
+                    background-color: var(--putih-f2);
+                }
+            }
+        }
+    }
+}
 
 
 @media(min-width:1500px) {
